force-app/main/default/objects/Popproject__c/Popproject__c.object-meta.xml
<CustomObject>
    <label>Popproject</label>
    <pluralLabel>Popprojects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <label>Popproject Name</label>
        <type>Text</type>
    </nameField>
</CustomObject>