force-app/main/default/objects/Popproject__c/fields/Building__c.field-meta.xml
<CustomField>
    <fullName>Building__c</fullName>
    <label>Building</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>