force-app/main/default/objects/Popproject__c/fields/Input_goods__c.field-meta.xml
<CustomField>
    <fullName>Input_goods__c</fullName>
    <label>Input goods</label>
    <type>Lookup</type>
    <referenceTo>Input_goods__c</referenceTo>
    <relationshipName>Popproject_Input_goods</relationshipName>
</CustomField>