force-app/main/default/objects/Popproject__c/fields/Money2__c.field-meta.xml
<CustomField>
    <fullName>Money2__c</fullName>
    <label>Money2</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>