force-app/main/default/objects/Popproject__c/fields/Money__c.field-meta.xml
<CustomField>
    <fullName>Money__c</fullName>
    <label>Money</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>