force-app/main/default/objects/Popproject__c/fields/Pop__c.field-meta.xml
<CustomField>
    <fullName>Pop__c</fullName>
    <label>Pop</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>